# cloud_registration

./: .gitignore  CAD-wj000.txt
registration/: design.docx
registration/CloudRegister/: CMakeLists.txt  CloudRegister.sln
registration/CloudRegister/CloudExample/: CloudExample.cpp  CloudExample.vcxproj  CloudExample.vcxproj.filters
registration/CloudRegister/CloudRegister/: BaseType.cpp  BaseType.h  CADModel.cpp  CADModel.h  CalcBayAndDepthMeasure.cpp  CalcBayAndDepthMeasure.h  CalcCorner.cpp  CalcCorner.h  CalcHoleMeasure.cpp  CalcHoleMeasure.h  CalcMeasureHelper.cpp  CalcMeasureHelper.h  CalcNetHeight.cpp  CalcNetHeight.h  CalcRootFlatness.cpp  CalcRootFlatness.h  CalcSquareness.cpp  CalcSquareness.h  CalcWallFlatness.cpp  CalcWallFlatness.h  CalcWallVerticality.cpp  CalcWallVerticality.h  CloudBorder.cpp  CloudBorder.h  CloudRefine.cpp  CloudRefine.h  CloudRegister.cpp  CloudRegister.h  CloudRegister.vcxproj  CloudRegister.vcxproj.filters  CloudSegment.cpp  CloudSegment.h  CoarseMatching.cpp  CoarseMatching.h  EdgeConstraint.cpp  EdgeConstraint.h  GeometryUtils.cpp  GeometryUtils.h  LPWrapper.cpp  LPWrapper.h  (+12 more)
registration/CloudRegister/G2O/: g2o_core.lib  g2o_solver_dense.lib  g2o_solver_eigen.lib  g2o_solver_pcg.lib  g2o_solver_structure_only.lib  g2o_stuff.lib  g2o_types_data.lib  g2o_types_icp.lib  g2o_types_sba.lib  g2o_types_sclam2d.lib  g2o_types_sim3.lib  g2o_types_slam2d.lib  g2o_types_slam2d_addons.lib  g2o_types_slam3d.lib  g2o_types_slam3d_addons.lib
registration/CloudRegister/G2O/include/g2o/g2o/: config.h
registration/CloudRegister/Glog/: glog.lib
registration/CloudRegister/Glog/include/glog/: logging.h  vlog_is_on.h
registration_ubuntu/src/: CMakeLists.txt  build.sh  wj007.txt  wj008.txt
registration_ubuntu/src/example/: CloudExample.cpp  FileHelper.h
registration_ubuntu/src/include/: CADModel.h  CalcBayAndDepthMeasure.h  CalcCorner.h  CalcMeasureHelper.h  CalcNetHeight.h  CalcRootFlatness.h  CalcSquareness.h  CalcWallFlatness.h  CalcWallVerticality.h  CloudRegister.h  CoarseMatching.h  EdgeConstraint.h  Segmentation.h  SingletonTemplate.h  Threshold.h  TransformOptimize.h  funHelper.h  ll.hpp
registration_ubuntu/src/source/: CADModel.cpp  CalcBayAndDepthMeasure.cpp  CalcCorner.cpp  CalcHoleMeasure.cpp  CalcMeasureHelper.cpp  CalcNetHeight.cpp  CalcRootFlatness.cpp  CalcWallFlatness.cpp  CalcWallVerticality.cpp  CloudRegister.cpp  CoarseMatching.cpp  EdgeConstraint.cpp  GeometryUtils.cpp  Segmentation.cpp  Threshold.cpp  TransformOptimize.cpp  funHelper.cpp
thirdpart/: g2o_change.rar  readme.txt
